# C-Study-Repo

./: .gitignore  CMakeLists.txt
my_project/: list.c  list.h  main.c
my_project/codewars/: counting_duplicates.c  counting_duplicates.h  palindrome.c  palindrome.h  prime.c
my_project/course_ex/: calling_functions.h  divide_7_with_3.h  exercise_1_20.c  exercise_1_20.h  exercise_3_2_how_does_string_character_arrays_work_in_c.h  external_variables_and_scope.c  external_variables_and_scope.h  fahrenheit.h  my_string_func.h  print_string.c
my_project/course_ex/linked_list/: list.c  list.h  main.c
my_project/web_examples/: binary_search.c  binary_search.h
